--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -1,8 +1,8 @@
-flask
-flask-cors
-pillow
-torch
-torchvision
-python-dotenv
-gunicorn
+flask==2.0.1
+flask-cors==3.0.10
+pillow==9.0.0
+python-dotenv==0.19.1
+torch==1.10.0
+torchvision==0.11.1
+gunicorn==20.1.0
 numpy
