--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -2,7 +2,7 @@ flask==2.0.1
 flask-cors==3.0.10
 pillow==9.0.0
 python-dotenv==0.19.1
-torch==1.10.0
-torchvision==0.11.1
+torch
+torchvision
 gunicorn==20.1.0
 numpy
