Implement Flask application for crop disease prediction
- Created a new Flask application in app.py to handle image uploads and predict crop diseases using a ResNet-50 model.
- Removed the previous configuration and model files, consolidating functionality into a single file.
- Updated Dockerfile to install specific versions of PyTorch and torchvision, and adjusted the application startup command.
- Modified requirements.txt to specify exact package versions for better dependency management.
- Added health check endpoint to monitor server status and PyTorch availability.

--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -10,10 +10,9 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
 # Copy requirements first to leverage Docker cache
 COPY requirements.txt .
 
-# Install Python dependencies and verify gunicorn is installed
+# Install Python dependencies with specific PyTorch version
 RUN pip install --no-cache-dir -r requirements.txt && \
-    pip install gunicorn && \
-    which gunicorn
+    pip install torch==2.0.1 torchvision==0.15.2 --index-url https://download.pytorch.org/whl/cpu
 
 # Create models directory
 RUN mkdir -p /app/models
@@ -21,16 +20,15 @@ RUN mkdir -p /app/models
 # Copy model files (if they exist)
 COPY models/ /app/models/
 
-# Copy the rest of the application
-COPY . .
+# Copy the application file
+COPY app.py .
+COPY .env* ./
 
-# Make port 5000 available to the world outside this container
+# Make port 5000 available
 EXPOSE 5000
 
 # Define environment variable
-ENV FLASK_APP=run.py
-ENV FLASK_ENV=production
 ENV MODEL_PATH=/app/models/best_ResNet-50.pth
 
-# Run the application with explicit path to gunicorn
-CMD ["python", "-m", "gunicorn", "--bind", "0.0.0.0:5000", "run:app"]
+# Run the application
+CMD ["gunicorn", "--bind", "0.0.0.0:5000", "app:app"]
