--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -3,7 +3,7 @@ werkzeug==2.0.3
 flask-cors==3.0.10
 pillow==9.0.0
 python-dotenv==0.19.1
-torch
+torch==2.4.0
 torchvision
 gunicorn==20.1.0
-numpy
+numpy==1.26.0
