--- a/package.json
+++ b/package.json
@@ -18,26 +18,27 @@
     "@clerk/clerk-expo": "^2.7.7",
     "@config-plugins/react-native-webrtc": "^10.0.0",
     "@expo/vector-icons": "^14.0.2",
-    "@react-native-async-storage/async-storage": "^2.1.1",
+    "@react-native-async-storage/async-storage": "1.23.1",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
     "@supabase/supabase-js": "^2.48.1",
     "@upstash/vector": "^1.2.0",
     "axios": "^1.7.9",
     "base64-js": "^1.5.1",
-    "expo": "~52.0.35",
+    "date-fns": "^4.1.0",
+    "expo": "~52.0.38",
     "expo-av": "~15.0.2",
     "expo-battery": "~9.0.2",
     "expo-blur": "~14.0.3",
     "expo-brightness": "~13.0.3",
     "expo-constants": "~17.0.6",
-    "expo-dev-client": "~5.0.12",
+    "expo-dev-client": "~5.0.14",
     "expo-font": "~13.0.3",
     "expo-haptics": "~14.0.1",
     "expo-image-picker": "~16.0.6",
     "expo-linear-gradient": "~14.0.2",
     "expo-linking": "~7.0.5",
-    "expo-router": "~4.0.17",
+    "expo-router": "~4.0.19",
     "expo-secure-store": "^14.0.1",
     "expo-speech": "~13.0.1",
     "expo-splash-screen": "~0.29.22",
@@ -68,7 +69,7 @@
     "@types/react": "~18.3.12",
     "@types/react-test-renderer": "^18.3.0",
     "jest": "^29.2.1",
-    "jest-expo": "~52.0.4",
+    "jest-expo": "~52.0.6",
     "react-test-renderer": "18.3.1",
     "supabase": "^2.12.1",
     "typescript": "^5.3.3"
