Add expo-camera dependency and implement camera functionality in CropScanScreen
- Added expo-camera to package.json and package-lock.json for camera capabilities.
- Updated CropScanScreen to utilize camera functionality, including permission handling and photo capture.
- Enhanced UI elements for camera view and permissions, improving user experience.
- Adjusted styles for better layout and visual consistency across the screen.

--- a/package.json
+++ b/package.json
@@ -61,7 +61,8 @@
     "react-native-webrtc": "^124.0.5",
     "react-native-webrtc-web-shim": "^1.0.7",
     "react-native-webview": "13.12.5",
-    "zod": "^3.24.2"
+    "zod": "^3.24.2",
+    "expo-camera": "~16.0.18"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
