Implement Push Notifications and Settings Enhancements
- Added support for push notifications using expo-notifications, including registration and token management.
- Updated Settings screen to allow users to enable/disable notifications and send test notifications.
- Introduced new utility functions for handling push notifications and saving tokens to user profiles in Supabase.
- Enhanced user experience with alerts for notification status and improved UI elements for notification settings.
- Added new assets for notification icon and sound.

--- a/app.json
+++ b/app.json
@@ -11,7 +11,8 @@
     "ios": {
       "supportsTablet": true,
       "bundleIdentifier": "com.bluequbit.krishiai",
-      "bitcode": false
+      "bitcode": false,
+      "usesAppleSignIn": true
     },
     "android": {
       "adaptiveIcon": {
@@ -27,7 +28,9 @@
         "android.permission.RECORD_AUDIO",
         "android.permission.SYSTEM_ALERT_WINDOW",
         "android.permission.WAKE_LOCK",
-        "android.permission.BLUETOOTH"
+        "android.permission.BLUETOOTH",
+        "android.permission.RECEIVE_BOOT_COMPLETED",
+        "android.permission.VIBRATE"
       ]
     },
     "web": {
@@ -59,6 +62,16 @@
           "photosPermission": "Allow $(PRODUCT_NAME) to access your photos for crop analysis.",
           "cameraPermission": "Allow $(PRODUCT_NAME) to access your camera for crop analysis."
         }
+      ],
+      [
+        "expo-notifications",
+        {
+          "icon": "./assets/images/notification-icon.png",
+          "color": "#4CAF50",
+          "sounds": [
+            "./assets/sounds/notification.wav"
+          ]
+        }
       ]
     ],
     "experiments": {
@@ -71,6 +84,13 @@
       "eas": {
         "projectId": "d96e42cd-861e-4c1b-a53f-b99800992e87"
       }
+    },
+    "notification": {
+      "icon": "./assets/images/notification-icon.png",
+      "color": "#4CAF50",
+      "androidMode": "default",
+      "androidCollapsedTitle": "KrishiAI",
+      "iosDisplayInForeground": true
     }
   }
 }
